--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,23 @@
+* {
+  box-sizing: border-box;
+}
+
 .cardHighlight {
   min-height: 100%;
   background-color: lightblue !important; 
 }
 
-/*.aboutMe {
-  background-color: lightblue !important;
-}*/
-
 .productCard {
-  min-height: 100%;
   background-color: lightsteelblue !important;
-  width: 300px;
+  width: 15%;
 }
 
 #navbarContent {
   max-width: 100%;
+}
+
+#productSection {
+  max-width: 100%;
+  padding: 0px;
+  text-align: center;
 }
