--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,27 @@
 
 #navbarContent {
   max-width: 100%;
+  padding: 0px;
 }
 
 #productSection {
   max-width: 100%;
   padding: 0px;
   text-align: center;
+}
+
+#openingHome {
+  text-align: center;
+  max-width: 100%;
+  height: 60vh;
+  position: relative;
+}
+
+#homeContent {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
