--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,13 @@
 #openingHome {
   text-align: center;
   max-width: 100%;
-  height: 60vh;
+  height: 70vh;
   position: relative;
+  background-image: url("https://i.pinimg.com/originals/eb/60/82/eb60823cf0dd7c2a92edee36ed2a3fe6.jpg");
+  background-size: cover;                
+  background-repeat: no-repeat;
+  background-position: center center;  
+  margin-top: 2%;
 }
 
 #homeContent {
@@ -37,4 +42,23 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  color: white;
+}
+
+#cardHome {
+  width: 50%;
+  text-align: center;
+}
+
+.footer {
+  height: 50px;
+  width: 100%;
+  background-color: gray;
+  color: black;
+  text-align: left;
+
+}
+
+#footerContent {
+  padding-top: 0.75rem;
 }
