--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,13 @@
 #productContainer {
   height: 100vh;
   max-width: 100%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 75%;
 }
 
 #registerContainer {
