--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   max-width: 100%;
   height: 70vh;
   position: relative;
-  background-image: url("https://images.unsplash.com/photo-1542728928-ee495082a3c6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80");
+  background-image: url("https://images.unsplash.com/photo-1546387903-6d82d96ccca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
   background-size: cover;                
   background-repeat: no-repeat;
   background-position: center center;  
@@ -145,4 +145,14 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 75%;
+}
+
+#profileContainer {
+  height: 100vh;
+  max-width: 100% !important;
+  background-image: url("https://images.unsplash.com/photo-1546387903-6d82d96ccca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
+}
+
+#profile {
+  max-width: 100% !important;
 }
